 * Added store/retrieval methods to DataObj
 * Modified Document to store and retrieve files via Storage layer
 * Added Storage abstraction layer EPrints::Storage that uses Storage plugins
 * Added Storage::Local plugin for legacy EPrints file system
 * Added security checks to Storage layer-based document retrieval

2008-04-22 tdb
 * Added more POD for Storage layer changes
 * Added $bucket argument to Storage layer API
 * Added get_mime_type() method to DataObj
 * Replaced duplicated URL parsing in Apache::Storage with passed pnotes

2008-04-24 tdb
 * Added a simple default citation style for imports
 * import->run() now replaces existing records and pulls in full-texts
 * Fixed <img> link to EPrints logo for default template

2008-04-25 tdb
 * Use the EPrint object to render fileinfo
 * Don't DECLINE requests to "/" when https_root is set to "", fixing #3361
 * Use relative path for icons and thumbnails, fixing #3360
 * Tidy-up of Data Objects:
  - removed deprecated remove_all class-method
  - added get_dataset_id class method to return dataset id
  - shared super-class new, new_from_data, remove for most classes

2008-04-28 tdb
 * Removed store/retrieve methods from DataObj, just wrapper methods anyway
 * Call storage layer with filename rather than uri
 * Added "DataObj::SubObject" to add parent methods to sub-objects
 * Added "file" dataset to store file metadata
 * Example adaption of a Convert plugin for storage layer use
 * Added utility storage methods to DataObj
 * Added database update to DataObj::commit superclass

2008-04-29 cjg
 * Added "schema" option to epadmin
 * Added XML::tidy to schema exporter

2008-04-30 tdb
 * Output a short list of commands with no arguments to epadmin
 * Clean up the list object in epadmin schema

2008-05-02 tdb
 * Added Import plugin for ORE resource maps

2008-05-07 tdb
 * Export Subjects in the same format as plain text
 * Added admin tool to check the subject tree for orphaned elements or circular
    references
